--- a/common/build.gradle
+++ b/common/build.gradle
@@ -49,9 +49,9 @@ dependencies {
 
     compile ("org.springframework.boot:spring-boot-starter-data-redis") // redis
 
-    compile group: 'org.springframework.data', name: 'spring-data-mongodb', version: '2.1.6.RELEASE'
-    compile group: 'org.mongodb', name: 'mongodb-driver', version: '3.8.2'
-    compile group: 'org.mongodb', name: 'mongodb-driver-core', version: '3.8.2'
+//    compile group: 'org.springframework.data', name: 'spring-data-mongodb', version: '2.1.6.RELEASE'
+//    compile group: 'org.mongodb', name: 'mongodb-driver', version: '3.8.2'
+//    compile group: 'org.mongodb', name: 'mongodb-driver-core', version: '3.8.2'
 
     compile group: 'io.lettuce', name: 'lettuce-core', version: '5.1.6.RELEASE'
 
